--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
@@ -160,11 +160,11 @@
       </div>
       <thead *ngIf="technicalCharacteristics.length > 0">
       <tr class="text-center row col-12 flex-nowrap">
-        <th scope="col" class="col-2">Loại thiết bị</th>
-        <th scope="col" class="col-2">Tên kỹ thuật</th>
-        <th scope="col" class="col-1">Điểm đo đầu</th>
+        <th scope="col" class="col-2">Loại phương tiện đo</th>
+        <th scope="col" class="col-2">Đại lượng đo</th>
+        <th scope="col" class="col-1">Từ</th>
         <th scope="col" class="col-1">Đơn vị</th>
-        <th scope="col" class="col-1">Điểm đo cuối</th>
+        <th scope="col" class="col-1">Đến</th>
         <th scope="col" class="col-1">Đơn vị</th>
         <th scope="col" class="col-1">Phương sai</th>
         <th scope="col" class="col-1">Đơn vị</th>
