--- a/measuring-instruments-management/src/app/component/sidebar/sidebar.component.html
+++ b/measuring-instruments-management/src/app/component/sidebar/sidebar.component.html
@@ -5,13 +5,17 @@
             class="list-group-item list-group-item-action list-group-item-light active" aria-current="true"
             [class.active]="activeButtonId.includes('instrument-management-sidebar')"
             routerLink="instruments"
-            (click)="sidebarClick($event)">Quản lý thiết bị</button>
+            (click)="sidebarClick($event)">Danh sách thiết bị</button>
     <button type="button"
             id="instrument-management-sidebar-create"
             class="list-group-item list-group-item-action list-group-item-light ps-5 btn-child" aria-current="true"
             routerLink="/instruments/create"
             [class.active-child]="activeButtonId == 'instrument-management-sidebar-create'"
             (click)="sidebarClick($event)"><i class="fa-solid fa-plus small"></i> Thêm mới</button>
+    <button type="button"
+            id="instrument-management-sidebar-create"
+            class="list-group-item list-group-item-action list-group-item-light ps-5 btn-child" aria-current="true">
+            <i class="fa-solid fa-plus small"></i> Quét mã QR</button>
 <!--    <button type="button"-->
 <!--            id="accreditation-management-sidebar"-->
 <!--            class="list-group-item list-group-item-action list-group-item-light"-->
