Add document volatility

--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-list/instrument-list.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-list/instrument-list.component.html
@@ -39,7 +39,7 @@
                  (ngModelChange)="enableItem(ins.id)">
         </div>
       </th>
-      <td class="col-2 d-flex align-items-center justify-content-start">
+      <td class="col-2 d-flex align-items-center justify-content-center">
         <a [routerLink]="[ins.id]" class="link-info">{{ins.instrumentName}}</a></td>
       <td class="col-1 d-flex align-items-center justify-content-center">{{ins.instrumentSerialNumber}}</td>
       <td class="col-1 d-flex align-items-center justify-content-center">{{ins.instrumentSymbol}}</td>
