--- a/measuring-instruments-management/src/app/component/header/header.component.html
+++ b/measuring-instruments-management/src/app/component/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="shadow position-fixed top-0 start-0 vw-100 z-3 px-2">
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="/">
+      <a class="navbar-brand" (click)="reloadPage()">
         <i class="fa-solid fa-scale-unbalanced me-2 fs-4"></i>
         <span>Quản lý thiết bị đo lường</span>
       </a>
