--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
@@ -7,6 +7,10 @@
               [class.bg-warning]="measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName === 'Sửa chữa'"
               [class.bg-primary]="measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName === 'Kiểm định'">
         {{measuringInstrumentDetailDto?.instrumentStatus?.instrumentStatusName}}</span>
+        <button class="btn btn-outline-primary float-end me-4">Tạo dữ liệu nạp mã QR
+        </button>
+        <button class="btn btn-outline-primary float-end me-4">Tạo dữ liệu nạp chip NFC
+        </button>
         <button class="btn btn-outline-primary float-end me-4"
                 [routerLink]="'/instruments/update/' + measuringInstrumentDetailDto?.id">
             Chỉnh sửa
@@ -72,6 +76,7 @@
         </div>
         <div id="instrument-info-container"
              class="col-8 d-flex flex-column overflow-auto pe-3" style="max-width: calc(100% - 350px)">
+            <p style="font-size: 24px; top: 0; left: 0">1. Thông tin cơ bản</p>
             <ul class="list-group">
                 <li class="list-group-item d-flex">
                     <div class="col-6">
@@ -140,11 +145,7 @@
            style="text-indent: 40px; text-align: justify">{{measuringInstrumentDetailDto?.detailedDescription}}</p>
     </div>
 </div>
-<div class="pe-4 mt-5" id="divider-information-container">
-    <hr class="border border-dark-subtle border-2 opacity-50">
-    <p class="text-center text-uppercase h2 user-select-none">Thông tin khác</p>
-    <hr class="border border-dark-subtle border-2 opacity-50">
-</div>
+
 <div class="mt-5 pe-3 position-relative pt-5">
     <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Đặc điểm kỹ thuật</p>
     <button class="btn btn-outline-primary position-absolute"
@@ -207,8 +208,15 @@
         </table>
     </div>
 </div>
+
+<div class="pe-4 mt-5" id="divider-information-container">
+    <hr class="border border-dark-subtle border-2 opacity-50">
+    <p class="text-center text-uppercase h2 user-select-none">Thông tin khác</p>
+    <hr class="border border-dark-subtle border-2 opacity-50">
+</div>
+
 <div class="mt-5 pe-3 position-relative pt-5">
-    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Phụ kiện đi kèm</p>
+    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">2. Tài liệu, dụng cụ, phụ tùng kèm theo</p>
     <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px"
             data-bs-toggle="modal" data-bs-target="#attached-document-create">Thêm mới
     </button>
@@ -223,7 +231,8 @@
             </div>
             <thead *ngIf="attachedDocuments.length > 0">
             <tr class="text-center row col-12 flex-nowrap">
-                <th scope="col" class="col-4">Tên tài liệu</th>
+                <th scope="col" class="col-1">STT</th>
+                <th scope="col" class="col-3">Tên tài liệu</th>
                 <th scope="col" class="col-2">Ký hiệu</th>
                 <th scope="col" class="col-1">Số lượng</th>
                 <th scope="col" class="col-3">Ghi chú</th>
@@ -236,8 +245,9 @@
             </tr>
             </thead>
             <tbody *ngIf="attachedDocuments.length > 0">
-            <tr class="row col-12" *ngFor="let item of attachedDocuments;">
-                <td class="col-4 d-flex align-items-start justify-content-center">{{item.documentName}}</td>
+            <tr class="row col-12" *ngFor="let item of attachedDocuments; let i = index">
+                <td class="col-1 d-flex align-items-start justify-content-center">{{i + 1}}</td>
+                <td class="col-3 d-flex align-items-start justify-content-center">{{item.documentName}}</td>
                 <td class="col-2 d-flex align-items-start justify-content-center">{{item.documentSymbol}}</td>
                 <td class="col-1 d-flex align-items-start justify-content-center">{{item.quantity}}</td>
                 <td class="col-3 d-flex align-items-start justify-content-center">{{item.documentNote}}</td>
@@ -259,7 +269,7 @@
     </div>
 </div>
 <div class="mt-5 pe-3 position-relative pt-5">
-    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Theo dõi biến động tài liệu</p>
+    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">3. Theo dõi biến động tài liệu, phụ tùng và kiểm kê hàng năm</p>
     <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px"
             data-bs-toggle="modal" data-bs-target="#document-volatility-create">Thêm mới
     </button>
@@ -274,8 +284,8 @@
             </div>
             <thead *ngIf="documentVolatiles.length > 0">
             <tr class="text-center row col-12 flex-nowrap">
-                <th scope="col" class="col-1">Ngày ghi nhận</th>
-                <th scope="col" class="col-3">Tài liệu thay đổi</th>
+                <th scope="col" class="col-1">Ngày tháng năm</th>
+                <th scope="col" class="col-3">Tên tài liệu, dụng cụ, phụ tùng</th>
                 <th scope="col" class="col-5">Lý do thay đổi</th>
                 <th scope="col" class="col-1">Số lượng</th>
                 <th scope="col" class="col-1 text-danger">
@@ -289,7 +299,7 @@
             <tbody *ngIf="documentVolatiles.length > 0">
             <tr class="row col-12" *ngFor="let item of documentVolatiles;">
                 <td class="col-1 d-flex align-items-start justify-content-center">{{item.volatilityDate | date: 'dd/MM/yyyy'}}</td>
-                <td class="col-3 d-flex align-items-start justify-content-center">{{item.attachedDocument.documentName}}</td>
+                <td class="col-3 d-flex align-items-start justify-content-center">{{item.attachedDocument}}</td>
                 <td class="col-5 d-flex align-items-start justify-content-center">{{item.volatilityPurpose}}</td>
                 <td class="col-1 d-flex align-items-start justify-content-center">{{item.quantity}}</td>
                 <td class="col-1 d-flex align-items-start justify-content-center ">
@@ -310,7 +320,7 @@
     </div>
 </div>
 <div class="mt-5 pe-3 position-relative pt-5">
-    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Theo dõi giao nhận</p>
+    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">4. Theo dõi giao nhận</p>
     <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px"
             data-bs-toggle="modal" data-bs-target="#instrument-forward-create">Thêm mới
     </button>
@@ -327,11 +337,11 @@
             <tr class="text-center row col-12 flex-nowrap">
                 <th scope="col" class="col-1">Ngày giao nhận</th>
                 <th scope="col" class="col-1">Đơn vị nhận</th>
-                <th scope="col" class="col-1">Người giao</th>
-                <th scope="col" class="col-1">Người nhận</th>
                 <th scope="col" class="col-1">Cơ quan phát lệnh</th>
                 <th scope="col" class="col-1">Số lệnh</th>
                 <th scope="col" class="col-2">Tình trạng</th>
+                <th scope="col" class="col-1">Người giao</th>
+                <th scope="col" class="col-1">Người nhận</th>
                 <th scope="col" class="col-2">Ghi chú</th>
                 <th scope="col" class="col-1 text-danger">
                     <i class="fa-regular fa-pen-to-square"></i>
@@ -345,11 +355,11 @@
             <tr class="row col-12" *ngFor="let item of instrumentForwards;">
                 <td class="col-1 d-flex align-items-start justify-content-center">{{item.forwardDate | date: 'dd/MM/yyyy'}}</td>
                 <td class="col-1 d-flex align-items-start justify-content-center">{{item.receiveUnit}}</td>
-                <td class="col-1 d-flex align-items-start justify-content-center">{{item.sender}}</td>
-                <td class="col-1 d-flex align-items-start justify-content-center">{{item.receiver}}</td>
                 <td class="col-1 d-flex align-items-start justify-content-center">{{item.issuingAuthority}}</td>
                 <td class="col-1 d-flex align-items-start justify-content-center">{{item.commandNumber}}</td>
                 <td class="col-2 d-flex align-items-start justify-content-center">{{item.instrumentForwardStatus}}</td>
+                <td class="col-1 d-flex align-items-start justify-content-center">{{item.sender}}</td>
+                <td class="col-1 d-flex align-items-start justify-content-center">{{item.receiver}}</td>
                 <td class="col-2 d-flex align-items-start justify-content-center">{{item.forwardNote}}</td>
                 <td class="col-1 d-flex align-items-start justify-content-center ">
                     <button class="btn btn-danger"
@@ -368,8 +378,67 @@
         </table>
     </div>
 </div>
+
 <div class="mt-5 pe-3 position-relative pt-5">
-    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Lịch sử kiểm định</p>
+    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">5. Theo dõi sửa chữa</p>
+    <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px"
+            data-bs-toggle="modal" data-bs-target="#instrument-repair-create">Thêm mới
+    </button>
+    <div class="border border-1 px-4 pb-2 d-inline-block overflow-auto w-100"
+         style="max-height: 500px;">
+        <table
+                class="table table-hover text-center text-break" style="min-width: 1200px;">
+            <caption class="d-none">Lịch sử sửa chữa</caption>
+            <div *ngIf="instrumentRepairs.length === 0"
+                 class="mt-2">
+                <p class="fs-4">{{this.constantsService.INFO_NOT_FOUND}}</p>
+            </div>
+            <thead *ngIf="instrumentRepairs.length > 0">
+            <tr class="text-center row col-12 flex-nowrap">
+                <th scope="col" class="col-1">Ngày sửa</th>
+                <th scope="col" class="col-2">Tình trạng</th>
+                <th scope="col" class="col-2">Nguyên nhân</th>
+                <th scope="col" class="col-2">Kết quả</th>
+                <th scope="col" class="col-1">Nơi sửa</th>
+                <th scope="col" class="col-1">Người sửa</th>
+                <th scope="col" class="col-1">Ghi chú</th>
+                <th scope="col" class="col-1 text-danger">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                </th>
+                <th scope="col" class="col-1 text-danger">
+                    <i class="fa-solid fa-trash fs-5"></i>
+                </th>
+            </tr>
+            </thead>
+            <tbody *ngIf="instrumentRepairs.length > 0">
+            <tr class="row col-12" *ngFor="let item of instrumentRepairs;">
+                <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairDate  | date: 'dd/MM/yyyy'}}</td>
+                <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.instrumentCondition}}</td>
+                <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairReason}}</td>
+                <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairResult}}</td>
+                <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairPlace}}</td>
+                <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairer}}</td>
+                <td class="col-1 d-flex align-items-start justify-content-start text-start">{{item.repairNote}}</td>
+                <td class="col-1 d-flex align-items-start justify-content-center ">
+                    <button class="btn btn-danger"
+                            data-bs-toggle="modal" data-bs-target="#instrument-repair-update"
+                            (click)="setInstrumentRepairIdUpdate(item.id)">
+                        <i class="fa-regular fa-pen-to-square"></i>
+                    </button>
+                </td>
+                <td class="col-1 d-flex justify-content-center align-items-start">
+                    <button class="btn btn-danger"
+                            (click)="showDeleteModal(item.id, 'instrumentRepair')">
+                        <i class="fa-solid fa-trash"></i>
+                    </button>
+                </td>
+            </tr>
+        </table>
+    </div>
+</div>
+
+<div class="mt-5 pe-3 position-relative pt-5">
+    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">6. Theo dõi kiểm định</p>
     <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px"
             data-bs-toggle="modal" data-bs-target="#instrument-accreditation-create">Thêm mới
     </button>
@@ -384,12 +453,12 @@
             </div>
             <thead *ngIf="instrumentAccreditations.length > 0">
             <tr class="text-center row col-12 flex-nowrap">
-                <th scope="col" class="col-1">Ngày kiểm định</th>
+                <th scope="col" class="col-1">Ngày tháng năm</th>
                 <th scope="col" class="col-2">Nơi kiểm định</th>
                 <th scope="col" class="col-2">Người kiểm định</th>
-                <th scope="col" class="col-1">Kết quả</th>
-                <th scope="col" class="col-1">Số xác nhận</th>
-                <th scope="col" class="col-1">Ngày hết hiệu lực</th>
+                <th scope="col" class="col-1">Kết quả kiểm định</th>
+                <th scope="col" class="col-1">Số GCN KĐ</th>
+                <th scope="col" class="col-1">Thời gian hiệu lực</th>
                 <th scope="col" class="col-2">Ghi chú</th>
                 <th scope="col" class="col-1 text-danger">
                     <i class="fa-regular fa-pen-to-square"></i>
@@ -425,65 +494,9 @@
         </table>
     </div>
 </div>
+
 <div class="mt-5 pe-3 position-relative pt-5">
-    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Lịch sử sửa chữa</p>
-    <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px"
-            data-bs-toggle="modal" data-bs-target="#instrument-repair-create">Thêm mới
-    </button>
-    <div class="border border-1 px-4 pb-2 d-inline-block overflow-auto w-100"
-         style="max-height: 500px;">
-        <table
-                class="table table-hover text-center text-break" style="min-width: 1200px;">
-            <caption class="d-none">Lịch sử sửa chữa</caption>
-            <div *ngIf="instrumentRepairs.length === 0"
-                 class="mt-2">
-                <p class="fs-4">{{this.constantsService.INFO_NOT_FOUND}}</p>
-            </div>
-            <thead *ngIf="instrumentRepairs.length > 0">
-            <tr class="text-center row col-12 flex-nowrap">
-                <th scope="col" class="col-1">Ngày sửa</th>
-                <th scope="col" class="col-2">Nguyên nhân</th>
-                <th scope="col" class="col-2">Tình trạng</th>
-                <th scope="col" class="col-2">Kết quả</th>
-                <th scope="col" class="col-1">Nơi sửa</th>
-                <th scope="col" class="col-1">Người sửa</th>
-                <th scope="col" class="col-1">Ghi chú</th>
-                <th scope="col" class="col-1 text-danger">
-                    <i class="fa-regular fa-pen-to-square"></i>
-                </th>
-                <th scope="col" class="col-1 text-danger">
-                    <i class="fa-solid fa-trash fs-5"></i>
-                </th>
-            </tr>
-            </thead>
-            <tbody *ngIf="instrumentRepairs.length > 0">
-            <tr class="row col-12" *ngFor="let item of instrumentRepairs;">
-                <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairDate  | date: 'dd/MM/yyyy'}}</td>
-                <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairReason}}</td>
-                <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.instrumentCondition}}</td>
-                <td class="col-2 d-flex align-items-start justify-content-start text-start">{{item.repairResult}}</td>
-                <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairPlace}}</td>
-                <td class="col-1 d-flex align-items-start justify-content-center">{{item.repairer}}</td>
-                <td class="col-1 d-flex align-items-start justify-content-start text-start">{{item.repairNote}}</td>
-                <td class="col-1 d-flex align-items-start justify-content-center ">
-                    <button class="btn btn-danger"
-                            data-bs-toggle="modal" data-bs-target="#instrument-repair-update"
-                            (click)="setInstrumentRepairIdUpdate(item.id)">
-                        <i class="fa-regular fa-pen-to-square"></i>
-                    </button>
-                </td>
-                <td class="col-1 d-flex justify-content-center align-items-start">
-                    <button class="btn btn-danger"
-                            (click)="showDeleteModal(item.id, 'instrumentRepair')">
-                        <i class="fa-solid fa-trash"></i>
-                    </button>
-                </td>
-            </tr>
-        </table>
-    </div>
-</div>
-<div class="mt-5 pe-3 position-relative pt-5">
-    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">Lịch sử sử dụng</p>
+    <p class="position-absolute" style="font-size: 24px; top: 0; left: 0">7. Theo dõi sử dụng</p>
     <button class="btn btn-outline-primary position-absolute" style="top: 0; right: 24px"
             data-bs-toggle="modal" data-bs-target="#instrument-usage-create">Thêm mới
     </button>
@@ -498,10 +511,10 @@
             </div>
             <thead *ngIf="instrumentUsages.length > 0">
             <tr class="text-center row col-12 flex-nowrap">
-                <th scope="col" class="col-1">Ngày theo dõi</th>
-                <th scope="col" class="col-4">Tình trạng</th>
-                <th scope="col" class="col-1">Thời gian dùng</th>
-                <th scope="col" class="col-2">Người dùng</th>
+                <th scope="col" class="col-1">Ngày tháng năm</th>
+                <th scope="col" class="col-4">Tình trạng PTĐ khi sử dụng</th>
+                <th scope="col" class="col-1">Thời gian làm việc</th>
+                <th scope="col" class="col-2">Người sử dụng</th>
                 <th scope="col" class="col-2">Ghi chú</th>
                 <th scope="col" class="col-1 text-danger">
                     <i class="fa-regular fa-pen-to-square"></i>
