some minor updates in UI

--- a/measuring-instruments-management/src/app/module/feature/instrument/component/document-volatility-create/document-volatility-create.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/document-volatility-create/document-volatility-create.component.html
@@ -46,7 +46,7 @@
 
                     <div class="mb-3">
                         <label for="volatility-purpose" class="form-label">Lý do thay đổi
-                            <sup class="text-danger fw-bold">*</sup></label>
+                            </label>
                         <input id="volatility-purpose"
                                type="text"
                                class="form-control"
@@ -62,7 +62,7 @@
 
                     <div class="mb-3">
                         <label for="quantity" class="form-label">Số lượng
-                            <sup class="text-danger fw-bold">*</sup></label>
+                            </label>
                         <input id="quantity"
                                type="number"
                                class="form-control"
