--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-detail/instrument-detail.component.html
@@ -335,7 +335,7 @@
             </div>
             <thead *ngIf="instrumentForwards.length > 0">
             <tr class="text-center row col-12 flex-nowrap">
-                <th scope="col" class="col-1">Ngày giao nhận</th>
+                <th scope="col" class="col-1">Ngày tháng năm</th>
                 <th scope="col" class="col-1">Đơn vị nhận</th>
                 <th scope="col" class="col-1">Cơ quan phát lệnh</th>
                 <th scope="col" class="col-1">Số lệnh</th>
