--- a/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-update/instrument-update.component.html
+++ b/measuring-instruments-management/src/app/module/feature/instrument/component/instrument-update/instrument-update.component.html
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="mb-3 col-6 px-2 ">
       <label for="instrument-group" class="form-label">Nhóm phương tiện
-        <sup class="text-danger fw-bold">*</sup></label>
+        </label>
       <select id="instrument-group"
               class="form-select"
               aria-label="Default select instrument-group"
@@ -79,7 +79,7 @@
   <div class="row">
     <div class="mb-3 col-6 px-2 ">
       <label for="management-level" class="form-label">Cấp quản lý
-        <sup class="text-danger fw-bold">*</sup></label>
+        </label>
       <select id="management-level"
               class="form-select"
               aria-label="Default select management-level"
@@ -99,7 +99,7 @@
 
     <div class="mb-3 col-6 px-2 ">
       <label for="manufacture-country" class="form-label">Nước sản xuất
-        <sup class="text-danger fw-bold">*</sup></label>
+        </label>
       <select id="manufacture-country"
               class="form-select"
               aria-label="Default select manufacture-country"
@@ -120,7 +120,7 @@
   <div class="row">
     <div class="mb-3 col-6 px-2 ">
       <label for="manufacture-year" class="form-label">Năm sản xuất
-        <sup class="text-danger fw-bold">*</sup></label>
+        </label>
       <select id="manufacture-year"
               class="form-select"
               aria-label="Default select manufacture-year"
@@ -140,7 +140,7 @@
 
     <div class="mb-3 col-6 px-2 ">
       <label for="in-service-date" class="form-label">Ngày biên chế
-        <sup class="text-danger fw-bold">*</sup></label>
+        </label>
       <input id="in-service-date"
              type="date"
              class="form-control"
@@ -179,12 +179,12 @@
     </div>
 
     <div class="mb-3 col-6 px-2 ">
-      <label for="weapon-guarantee" class="form-label">Độ đảm bảo vũ khí
-        <sup class="text-danger fw-bold">*</sup></label>
+      <label for="weapon-guarantee" class="form-label">Bảo đảm cho VK-TBKT
+        </label>
       <input id="weapon-guarantee"
              type="text"
              class="form-control"
-             placeholder="Nhập độ đảm bảo vũ khí"
+             placeholder="Nhập bảo đảm cho VK-TBKT"
              formControlName="weaponGuarantee"
              [ngClass]="{
                     'is-invalid': (mainForm.controls['weaponGuarantee'].touched) && (mainForm.controls['weaponGuarantee'].invalid),
@@ -215,8 +215,8 @@
     </div>
 
     <div class="mb-3 col-6 px-2 ">
-      <label for="accreditation-center" class="form-label">Trung tâm kiểm định
-        <sup class="text-danger fw-bold">*</sup></label>
+      <label for="accreditation-center" class="form-label">Nơi kiểm định
+        </label>
       <select id="accreditation-center"
               class="form-select"
               aria-label="Default select accreditation-center"
@@ -237,7 +237,7 @@
   <div class="row">
     <div class="mb-3 col-6 px-2 ">
       <label for="quality-level" class="form-label">Mức chất lượng
-        <sup class="text-danger fw-bold">*</sup></label>
+        </label>
       <select id="quality-level"
               class="form-select"
               aria-label="Default select quality-level"
@@ -257,7 +257,7 @@
 
     <div class="mb-3 col-6 px-2 ">
       <label for="instrument-status" class="form-label">Tình trạng
-        <sup class="text-danger fw-bold">*</sup></label>
+        </label>
       <select id="instrument-status"
               class="form-select"
               aria-label="Default select instrument-status"
